# alberta_sat_spi_interface

./: Cargo.toml  README.md
ex3_ground_station/: .gitignore  README.md
ex3_ground_station/cli_command_obc/: .gitignore  Cargo.toml  README.md
ex3_ground_station/cli_command_obc/src/: main.rs
ex3_ground_station/cli_ground_station/: Cargo.toml  README.md
ex3_ground_station/cli_ground_station/src/: main.rs
ex3_ground_station/dashboard/: Cargo.toml  index.html  tailwind.config.js
ex3_ground_station/dashboard/src/: main.rs  routes.rs
ex3_ground_station/dashboard/src/components/: command_form.rs  mod.rs  nav_bar.rs
ex3_ground_station/dashboard/src/pages/: command_history_page.rs  home_page.rs  mod.rs  send_command_page.rs
ex3_ground_station/dashboard/src/types/: command.rs
ex3_ground_station/dashboard/styles/: output.css
ex3_ground_station/migration/: Cargo.toml
ex3_ground_station/migration/src/: lib.rs  m20240616_000001_create_command_table.rs
ex3_ground_station/server/: Cargo.toml
ex3_ground_station/server/src/: main.rs  message.rs  obc_client.rs
ex3_ground_station/server/src/entities/: command.rs  mod.rs
ex3_ground_station/server/static/: index.html
ex3_ground_station/server/static/css/: cmd.css  style.css
ex3_ground_station/server/static/js/: command.js  debug.js  index.js  request.js
ex3_obc_fsw/: .gitignore  README.md
ex3_obc_fsw/dev_tools/: README.md
ex3_obc_fsw/dev_tools/cli_test_msg/: Cargo.toml  README.md
ex3_obc_fsw/dev_tools/cli_test_msg/src/: lib.rs  main.rs
ex3_obc_fsw/dev_tools/ipc_burst_hardcoded/: Cargo.toml
ex3_obc_fsw/dev_tools/ipc_burst_hardcoded/src/: main.rs
ex3_obc_fsw/dev_tools/ipc_dummy_client/: Cargo.toml  README.md
ex3_obc_fsw/dev_tools/ipc_dummy_client/src/: main.rs
ex3_obc_fsw/handlers/: README.md
ex3_obc_fsw/handlers/bulk_msg_handler/: Cargo.toml
ex3_obc_fsw/handlers/bulk_msg_handler/src/: main.rs
ex3_obc_fsw/handlers/coms_handler/: Cargo.toml  README.md
ex3_obc_fsw/handlers/coms_handler/src/: main.rs
ex3_obc_fsw/handlers/dfgm_handler/: .gitignore  Cargo.toml  README.md
ex3_obc_fsw/handlers/dfgm_handler/src/: main.rs
ex3_obc_fsw/msg_dispatcher/: .gitignore  Makefile  README.md  connection.c  connection.h  dispatcher_dummy_client.c  msg_dispatcher.c
ex3_obc_fsw/msg_dispatcher/demo_ipc_client_server/: README.md  client.c  connection.c  connection.h  run.sh  server.c
ex3_obc_fsw/scheduler/: .gitignore  Cargo.toml  README.md  delete_extra_dirs.sh  log4rs.toml
ex3_obc_fsw/scheduler/src/: log.rs  main.rs  schedule_message.rs  scheduler.rs
ex3_shared_libs/: README.md
ex3_shared_libs/common/: Cargo.toml
ex3_shared_libs/common/src/: lib.rs
ex3_shared_libs/interfaces/ipc/: Cargo.toml  README.md
ex3_shared_libs/interfaces/ipc/src/: lib.rs
ex3_shared_libs/ipc_interface/: Cargo.toml
ex3_shared_libs/ipc_interface/src/: lib.rs
ex3_shared_libs/message_structure/: Cargo.toml  README.md
ex3_shared_libs/message_structure/src/: lib.rs
ex3_shared_libs/pmod_oled/: Cargo.toml  README.md
ex3_shared_libs/pmod_oled/src/: lib.rs  main.rs
ex3_shared_libs/spi_interface/: Cargo.toml  README.md
ex3_shared_libs/spi_interface/src/: lib.rs  main.rs
ex3_shared_libs/tcp_interface/: Cargo.toml  README.md
ex3_shared_libs/tcp_interface/src/: lib.rs
scripts/: uplink_command_msg.sh
