[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
jsonrpc = "0.18.0"
reqwasm = "0.5.0"
serde_json = "1.0.117"
web-sys = "0.3.69"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-custom-components = { version = "0.2.2", features = ["table", "tabs", "pagination"] }
serde = "1.0.203"
serde-value = "0.7.0"

