[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
rocket_cors = "0.6.0"
rocket = { version = "0.5.0", features = ["json"] }
sea-orm = {version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
