[package]
name = "pmod_oled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.6.0"
ssd1306 = "0.9.0"
spi_interface = { path = "../spi_interface" }
tcp_interface = { path = "../tcp_interface" }